--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
@@ -1,4 +1,4 @@
-﻿@namespace SwashbucklerDiary.Rcl.Layout
+@namespace SwashbucklerDiary.Rcl.Layout
 @inherits MainLayoutNavBase
 
 <MNavigationDrawer App="true"
@@ -7,7 +7,7 @@
                    MiniVariant="true"
                    MiniVariantWidth="76"
                    Touchless="true"
-                   Style="top:initial !important;">
+                   Style="top:initial !important;background:inherit;">
     <MList Nav>
         @foreach (var item in Items)
         {
