--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiarySetting/DiarySetting.razor
@@ -112,7 +112,7 @@
            Elevation="0"
            Rounded="@("lg")">
         <MList>
-            <MListItem Class="hidden-sm-and-down" OnClick="@(()=>To("outlineSetting"))">
+            <MListItem OnClick="@(()=>To("outlineSetting"))">
                 <MListItemIcon>
                     <MIcon Class="evident-icon">
                         format_list_bulleted
@@ -126,7 +126,7 @@
                 </MListItemAction>
             </MListItem>
 
-            <MDivider Class="mx-5 hidden-sm-and-down"></MDivider>
+            <MDivider Class="mx-5"></MDivider>
 
             <MListItem>
                 <MListItemIcon>
