--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCard.razor
@@ -42,7 +42,7 @@
             <MButton @attributes="activatorAttributes"
                      Icon="true"
                      OnClick="OpenMenu">
-                <MIcon Class="@($"card__menu {(IsActive ? "card-list__selected-menu" : "")}")">
+                <MIcon Class="@MenuIconClass">
                     keyboard_arrow_down
                 </MIcon>
             </MButton>
