--- a/src/SwashbucklerDiary.Rcl/Components/TextareaEdit/TextareaEdit.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TextareaEdit/TextareaEdit.razor
@@ -1,16 +1,16 @@
 @namespace SwashbucklerDiary.Rcl.Components
 
 <CustomMTextarea @ref="mTextarea"
-                    Value="@Value"
-                    ValueChanged="ValueChanged"
-                    Class="@($"{Class} user-select flex-grow-1 flex-column")"
-                    Solo="true"
-                    Flat="true"
-                    BackgroundColor="transparent"
-                    HideDetails="@("auto")"
-                    NoResize="true"
-                    Autofocus="Autofocus"
-                    OnAfter="OnAfter"
-                    spellcheck="false"
-                    Placeholder="@(I18n.T("Please enter content"))">
+                 Value="@Value"
+                 ValueChanged="ValueChanged"
+                 Class="@InternalClass"
+                 Solo="true"
+                 Flat="true"
+                 BackgroundColor="transparent"
+                 HideDetails="@("auto")"
+                 NoResize="true"
+                 Autofocus="Autofocus"
+                 OnAfter="OnAfter"
+                 spellcheck="false"
+                 Placeholder="@(I18n.T("Please enter content"))">
 </CustomMTextarea>
