--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
@@ -6,11 +6,27 @@
 </div>
 
 @code {
-    string WrapClass => $"d-flex {(RightOutline ? "flex-row-reverse" : "")}";
+    string? WrapClass => new CssBuilder()
+        .Add("d-flex")
+        .AddIf("flex-row-reverse", RightOutline)
+        .Build();
 
-    string InternalStyle => $"flex: 1;min-width: 1px; {Style}";
+    string InternalStyle => new StyleBuilder()
+        .Add("flex", "1")
+        .Add("min-width", "1px")
+        .Add(Style)
+        .Build();
 
-    string InternalOutlineClass => $"vditor-outline {OutlineClass} {(RightOutline ? "vditor-outline--right" : "")}";
+    string InternalOutlineClass => new CssBuilder()
+        .Add("vditor-outline")
+        .Add(OutlineClass)
+        .AddIf("vditor-outline--right", RightOutline)
+        .Build();
 
-    string InternalOutlineStyle => $"position: sticky;top: 0px; {(Outline ? "display:block;" : "")} {OutlineStyle}";
+    string InternalOutlineStyle => new StyleBuilder()
+        .Add("position", "sticky")
+        .Add("top", "0px")
+        .AddIf("display", "block", Outline)
+        .Add(OutlineStyle)
+        .Build();
 }
