--- a/src/SwashbucklerDiary.Rcl/_Imports.razor
+++ b/src/SwashbucklerDiary.Rcl/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -6,10 +6,12 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Masa.Blazor
+@using Masa.Blazor.Core
 @using Masa.Blazor.Presets
-@using SwashbucklerDiary.Shared
 @using SwashbucklerDiary.Rcl.Layout
 @using SwashbucklerDiary.Rcl.Essentials
 @using SwashbucklerDiary.Rcl.Services
 @using SwashbucklerDiary.Rcl.Models
 @using SwashbucklerDiary.Rcl.Components
+@using SwashbucklerDiary.Rcl.Extensions
+@using SwashbucklerDiary.Shared
