--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFeaturesPage.razor
@@ -57,7 +57,7 @@
                             @(I18n.T(item.Name))
                         </MListItemTitle>
                         <MListItemSubtitle Class="text-caption-xs-only">
-                            @(GetAppFeaturePath(item))
+                            @I18n.TForAppFeaturePath(item.Path)
                         </MListItemSubtitle>
                     </MListItemContent>
                 </MListItem>
