--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
@@ -211,6 +211,6 @@
 
     private string TagsWrapClass => new CssBuilder()
         .Add("pl-2")
-        .AddIf("d-none", SelectedTags.Count == 0)
-        .Build();
+        .Add("d-none", SelectedTags.Count == 0)
+        .ToString();
 }
