🐛 fix: moblie menu icon click to trigger twice

--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
@@ -23,8 +23,7 @@
                                         <MButton Class="second-background mb-2"
                                                  Width="56"
                                                  Height="56"
-                                                 Icon="true"
-                                                 OnClick="@item.OnClick">
+                                                 Icon="true">
                                             <MIcon>@(item.Icon)</MIcon>
                                         </MButton>
                                         <div class="title-container text-caption">
