♻️ refactor: rename PopupServiceHelper to AlertService, rename MasaBlazorHelper to BreakpointService

--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
@@ -19,5 +19,5 @@
 </MNavigationDrawer>
 
 @code {
-    private bool Show => MasaBlazorHelper.Breakpoint.SmAndUp && IsPermanentPath;
+    private bool Show => BreakpointService.Breakpoint.SmAndUp && IsPermanentPath;
 }
