--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
@@ -21,5 +21,5 @@
 @code {
     private readonly static string cssHref = $"./_content/{Rcl.Essentials.StaticWebAssets.RclAssemblyName}/css/extend/masa-blazor-extend-enqueued-snackbars.css";
 
-    private bool Show => MasaBlazorHelper.Breakpoint.Xs && IsPermanentPath;
+    private bool Show => BreakpointService.Breakpoint.Xs && IsPermanentPath;
 }
