♻️ refactor: Desktop outline area is more prominent

--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/VditorMarkdownPreview.razor
@@ -26,7 +26,7 @@
     string InternalOutlineStyle => new StyleBuilder()
         .Add("position", "sticky")
         .Add("top", "0px")
-        .Add("display", "block", Outline)
+        .AddIf("display", "block", Outline)
         .Add(OutlineStyle)
         .ToString();
 }
