--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -60,19 +60,28 @@
                  ContentClass="pb-5"
                  ContentStyle="padding-top:0px;">
     <div id="screenshot" class="primary-background">
-        <div class="d-flex align-center px-3">
-            <span class="text-h6 font-weight-bold mr-3">
-                @(diary.CreateTime.ToString("yyyy/MM/dd"))
-            </span>
-
-            <span class="font-weight-bold mr-5">
-                @(diary.CreateTime.ToString("HH:mm"))
-            </span>
-
-            <span class="text-subtitle-2">
-                @(I18n.ToWeek(diary.CreateTime))
-            </span>
-
+        <div class="d-flex align-center px-3 flex-wrap">
+            @if (diaryTimeFormat?.Contains("yyyy/MM/dd") ?? false)
+            {
+                <span class="text-h6 font-weight-bold mr-3">
+                    @(diary.CreateTime.ToString("yyyy/MM/dd"))
+                </span>
+            }
+            
+            @if (diaryTimeFormat?.Contains("HH:mm") ?? false)
+            {
+                <span class="font-weight-bold mr-5">
+                    @(diary.CreateTime.ToString("HH:mm"))
+                </span>
+            }
+            
+            @if (diaryTimeFormat?.Contains("dddd") ?? false)
+            {
+                <span class="text-subtitle-2">
+                    @(I18n.ToWeek(diary.CreateTime))
+                </span>
+            }
+            
             <MSpacer></MSpacer>
 
             <span class="text-subtitle-2">
