--- a/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Write/WritePage.razor
@@ -62,16 +62,27 @@
                      ContentStyle="height:100%;">
         <div>
             <div class="d-flex align-center px-3 flex-wrap">
-                <button class="d-flex align-center text-h6 font-weight-bold mr-3" @onclick="()=>showDate=true">
-                    @(diary.CreateTime.ToString("yyyy/MM/dd"))
-                </button>
-                <button class="d-flex align-center font-weight-bold mr-5" @onclick="()=>showTime=true">
-                    @(diary.CreateTime.ToString("HH:mm"))
-                </button>
-                <span class="text-subtitle-2">
-                    @(I18n.ToWeek(diary.CreateTime))
-                </span>
+                @if (diaryTimeFormat?.Contains("yyyy/MM/dd") ?? false)
+                {
+                    <button class="d-flex align-center text-h6 font-weight-bold mr-3" @onclick="()=>showDate=true">
+                        @(diary.CreateTime.ToString("yyyy/MM/dd"))
+                    </button>
+                }
 
+                @if (diaryTimeFormat?.Contains("HH:mm") ?? false)
+                {
+                    <button class="d-flex align-center font-weight-bold mr-5" @onclick="()=>showTime=true">
+                        @(diary.CreateTime.ToString("HH:mm"))
+                    </button>
+                }
+
+                @if (diaryTimeFormat?.Contains("dddd") ?? false)
+                {
+                    <span class="text-subtitle-2">
+                        @(I18n.ToWeek(diary.CreateTime))
+                    </span>
+                }
+                
                 <MSpacer></MSpacer>
 
                 <span class="text-subtitle-2">
