--- a/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Home/HomePage.razor
@@ -40,6 +40,7 @@
             <DiaryCardList @bind-Value="templates"
                            @bind-Tags="Tags"
                            HideStatisticsCard
+                           Template
                            NotFoundText="@I18n.T("No templates")">
             </DiaryCardList>
         </MContainer>
