♻️ refactor(ErrorDialog) : display log

--- a/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Gtk/Layout/MainLayout.razor
@@ -23,7 +23,7 @@
                 </ChildContent>
 
                 <ErrorContent>
-                    <ErrorDialog></ErrorDialog>
+                    <ErrorDialog Exception="@context"></ErrorDialog>
                 </ErrorContent>
             </ErrorBoundary>
         </CascadingValue>
