--- a/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
+++ b/src/SwashbucklerDiary.Maui/Layout/MainLayout.razor
@@ -24,7 +24,7 @@
                 </ChildContent>
 
                 <ErrorContent>
-                    <ErrorDialog></ErrorDialog>
+                    <ErrorDialog Exception="@context"></ErrorDialog>
                 </ErrorContent>
             </ErrorBoundary>
         </CascadingValue>
