--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ErrorDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/ErrorDialog.razor
@@ -3,6 +3,7 @@
 <MDialog Value="true"
          ContentClass="rounded-lg"
          Persistent="true"
+         Scrollable="true"
          MaxWidth="420">
     <MCard>
         <MCardTitle Class="font-weight-bold">
@@ -11,11 +12,16 @@
             </MIcon>
             @(I18n.T("Error"))
         </MCardTitle>
-        <MCardText Class="pb-0">
+        <MCardText Class="pb-0 scroll-show" Style="max-height:300px;">
             @Text
         </MCardText>
         <MCardActions>
             <MSpacer></MSpacer>
+            <MButton Text="true"
+                     Color="primary"
+                     OnClick="CopyDetailedInformationAsync">
+                @(I18n.T("Copy detailed information"))
+            </MButton>
             <MButton Text="true"
                      Color="red"
                      OnClick="Quit">
