--- a/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MultiDisplay/MultiMenu.razor
@@ -42,12 +42,14 @@
         <MMenu @ref="mMenu"
                Value="Visible"
                ValueChanged="InternalVisibleChanged"
+               ContentStyle="width:max-content;"
                Rounded="@("lg")"
                Bottom="true"
                Right="true"
                OffsetX="MenuOffsetX"
                NudgeBottom="@MenuNudgeBottom"
                NudgeLeft="@MenuNudgeLeft"
+               MaxWidth="200"
                MinWidth="150"
                Transition="scroll-x-reverse-transition">
             <ActivatorContent>
